# plover-canto-seoijin

./: .gitignore  MANIFEST.in  README.md  georgiyue.json  georgiyuehz.json  setup.cfg
plover_canto_seoijin/: system.py
plover_canto_seoijin/dictionaries/: .commands.json.swp  briefs.json  commands.json  congkit.json  jyutping.json  main.json  shared.json  symbol.json  user.json
plover_canto_seoijin/dictionaries/convert/: convert.py  j2s.json  shared.json
plover_jyutping/: system.py
plover_jyutping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plover_jyutping/dictionaries/: briefs.json  commands.json  jyutping_commands.json  jyutping_main.json  jyutping_punctuation.json  user.json
