[metadata]
name = plover-canto-seoijin
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
    setuptools>=30.3.0
install_requires =
    plover>=4.0.0.dev10
packages =
    plover_canto_seoijin

[options.entry_points]
plover.system = 
    Cantonese (Seoijin) = plover_canto_seoijin.system
